k8s_files/ingress/ingress_file.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-workshop-ingress
spec:
  rules:
  - host: myapp.info
    http:
      paths:
      - path: /ping
        pathType: Prefix
        backend:
          service:
            name: k8s-workshop-load-service1
            port:
              number: 5000
      - path: /ping1
        pathType: Prefix
        backend:
          service:
            name: k8s-workshop-load-service2
            port:
              number: 5000
